--- a/package.json
+++ b/package.json
@@ -18,28 +18,36 @@
     "flyonui": "^2.4.1",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.4",
     "react-uuid": "^2.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@iconify-json/tabler": "^1.2.23",
     "@iconify/tailwind4": "^1.0.6",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/vite": "^4.1.15",
     "@types/jquery": "^3.5.33",
     "@types/node": "^24.9.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "postcss": "^8.5.6",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "npm:rolldown-vite@7.1.14"
