--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.16",
     "@types/lodash": "^4.17.20",
     "clsx": "^2.1.1",
+    "express": "^5.1.0",
     "firebase": "^12.4.0",
     "flyonui": "^2.4.1",
     "jquery": "^3.7.1",
