--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,17 @@
 {
   "hosting": {
+    "site": "forgemockapi",
     "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
