--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview",
     "deploy:hosting": "npm run build && firebase deploy --only hosting",
     "deploy:hosting:forgemockapi": "npm run build && firebase deploy --only hosting:forgemockapi",
-    "firebase:emulator": "npm run build && firebase emulators:start"
+    "firebase:emulator": "npm run build && firebase emulators:start --only hosting,functions"
+  },
+  "engines": {
+    "node": "22"
   },
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
